--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -7,11 +7,12 @@
   .card {
     background-color: white;
     border-radius: 10px;
-    padding: 20px;
+    padding: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     display: flex;
     gap: 15px;
     align-items: center;
+    max-width: 230px;
   }
   
   .card-icon {
@@ -28,7 +29,7 @@
   
   .card-info h3 {
     font-size: 14px;
-    color: #7f8c8d;
+    color: #3ad83a;
     margin-bottom: 5px;
   }
   
