--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,21 +1,22 @@
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
+    gap: 23px;
   }
   
-  .card {
-    background-color: white;
+  .card,.staffs {
+    background: white;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 15px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     display: flex;
     gap: 15px;
     align-items: center;
     max-width: 230px;
   }
   
-  .card-icon {
+  .card-icon, .staff-icon {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -27,13 +28,13 @@
     font-size: 20px;
   }
   
-  .card-info h3 {
+  .card-info h3, .staffs-number h4, .developers-number h4 {
     font-size: 14px;
-    color: #3ad83a;
+    color: #313030;
     margin-bottom: 5px;
   }
   
-  .card-info h2 {
+  .card-info h2,  .staffs-number h2, .developers-number h2 {
     font-size: 24px;
     color: #2c3e50;
     margin-bottom: 5px;
@@ -49,4 +50,10 @@
   
   .negative {
     color: #e74c3c;
+  }
+  .staffs{
+    gap: 20px;
+  }
+  .developers-number h2, .staffs-number h2{
+    text-align: center;
   }
