--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,10 +1,11 @@
-/* src/components/Charts/Charts.css */
 .chart-container {
-    flex: 2;
-    background-color: white;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  flex: 2;
+  background: white;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
+  padding: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
   }
   
   .chart-header {
@@ -15,8 +16,8 @@
   }
   
   .chart-header h3 {
-    color: #2c3e50;
-  }
+    color: #61db61;
+   }
   
   .chart-header select {
     padding: 5px 10px;
@@ -43,7 +44,7 @@
   
   .chart-bar {
     width: 30px;
-    background-color: rgba(52, 152, 219, 0.5);
+    background-color: #82e282;
     border-radius: 5px 5px 0 0;
     transition: height 0.3s ease;
     position: relative;
