--- a/src/components/TopProducts/TopProducts.css
+++ b/src/components/TopProducts/TopProducts.css
@@ -1,13 +1,13 @@
 .top-products {
-    background-color: white;
+    background: white;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    margin-top: 20px;
   }
   
   .top-products h3 {
-    color: #2c3e50;
+    color: #61db61;;
     margin-bottom: 20px;
   }
   
@@ -44,6 +44,6 @@
   
   .progress {
     height: 100%;
-    background-color: #3498db;
+    background-color: #82e282;
     border-radius: 4px;
   }
