--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -17,15 +17,22 @@
   }
   
   .card-icon, .staff-icon {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-color: #3498db20;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #3498db;
+    color: #2ecc71;
     font-size: 20px;
+  }
+  .card-icon svg { 
+    flex-shrink: 0;
+  }
+  
+  .card-info {
+    flex: 1;
   }
   
   .card-info h3, .staffs-number h4, .developers-number h4 {
@@ -54,6 +61,4 @@
   .staffs{
     gap: 20px;
   }
-  .developers-number h2, .staffs-number h2{
-    text-align: center;
-  }
+  
