--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -52,7 +52,7 @@
   display: flex;
   align-items: center;
   padding: 12px 20px;
-  color: #3ad83a;
+  color: grey;
   text-decoration: none;
   transition: background-color 0.3s;
 }
