--- a/src/pages/Settings/Settings.css
+++ b/src/pages/Settings/Settings.css
@@ -1,10 +1,12 @@
 .settings-page{
-    padding: 20px;
     display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
     flex-direction: column;
     gap: 30px;
 }
 .settings-navbar{
+    background: white;
     flex: 1;
     display: flex;
     justify-content: space-between;
@@ -137,6 +139,7 @@ select:focus{
     float: right;
     display: flex;
     gap: 15px;
+    margin-bottom: 20px;
 }
 .save{
     
@@ -167,6 +170,9 @@ select:focus{
 }
 .save:hover{
     background: #3ad83a;
+}
+.max-login{
+    display: block;
 }
 .max-login select{
     width: 50%;
