--- a/src/pages/UserManagements/UserManagements.css
+++ b/src/pages/UserManagements/UserManagements.css
@@ -7,13 +7,11 @@ body{
 }
 .user-navbar{
     display: flex;
-    justify-content: space-around;
-    gap: 30px;
+    justify-content: space-between;
     backdrop-filter: blur(10px);
     margin-bottom: 20px;
-    margin-top: 20px;
-    margin-right: 20px;
-    padding: 20px;
+    margin-top: 30px;
+    
 }
 .user-navbar h2{
     margin-left: 30px;
@@ -43,11 +41,16 @@ body{
     transform: scale(1.1);
 }
 .user-top-bar{
+    margin: 20px;
     display: flex;
+    padding: 10px;
     justify-content: space-between;
-    padding: 20px;
     margin-bottom: 20px;
-    border-radius: 5px;
+    background: white;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    align-items: center;
 }
 .top-bar-search input{
     flex: 2;
